[client menu] fix menu alignement again
* Fix menu alignment again using fa-fw (fix #228 again)
* Use folder instead of plus to make it clearer
* Reduce the padding in the hierarchy
* Add a lightgrey "-" when there is no folder to make the hierarchy more
visible

--- a/shuttleofx_client/static_tmp/styles/styles.less
+++ b/shuttleofx_client/static_tmp/styles/styles.less
@@ -518,19 +518,16 @@ ul.right-nav li .fa{
         ul {
             width: auto;
             height: auto;
-            padding-left: 15%;
+            padding-left: 3.5em;
             text-transform: capitalize;
             li {
                 width: auto;
                 border: none;
                 min-height: 26px;
-                &.no-sub-category{
-                    margin-left: 18%;
-                }
                 a {
                     width: auto;
                     max-width: 100%;
-                    margin-left: 5px;
+                    margin-left: 0px;
                     font-size: 0.85em;
                     display: inline-block;
                     line-height: 1.5;
@@ -539,21 +536,20 @@ ul.right-nav li .fa{
                     text-overflow: ellipsis;
                     vertical-align: middle;
                 }
-                i{
-                    padding: .5em;
+                i.folder{
                     cursor: pointer;
-                    font-size: 0.8em;
+                }
+                i.nofolder{
+                    color: lightgrey;
                 }
                 ul{
                     display: none;
+                    padding-left: 1.5em;
                 }
             }
         }
     }
     
-    .fa{
-        padding-right: 10px;
-    }
     .legacy{
         border-top: 1px solid #ddd;
         background: #fff;
